Fixed profile menu on mobile devices

--- a/src/Styles/Perfil.css
+++ b/src/Styles/Perfil.css
@@ -36,9 +36,6 @@
 .Perfil .Sidebar{
     background: var(--bgColor);
     border-radius: 5px 0px 0px 5px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
     padding: 20px;
     width: 300px;
 }
@@ -72,7 +69,7 @@
     width: 100%;
 }
 .Perfil .Datos{
-    overflow-y: scroll;
+    overflow-y: auto;
     padding: 20px;
     width: 100%;
 }
@@ -199,10 +196,10 @@
     .Perfil-Wrap{
         border-radius: 0px;
         flex-direction: column;
+        justify-content: flex-start;
         height: 100%;
     }
     .Perfil .Sidebar{
-        height: 100%;
         width: 100%;
     }
     .Perfil .Notifications .Notifications-Menu{
